crates/vize_patina/src/rules/script/return_in_computed_property/snapshots/vize_patina__rules__script__return_in_computed_property__tests__invalid_options_getter_without_return.snap
---
source: crates/vize_patina/src/rules/script/return_in_computed_property.rs
expression: result.diagnostics
---
[
    LintDiagnostic {
        rule_name: "script/return-in-computed-property",
        severity: Error,
        message: "Expected to return a value in this computed property.",
        start: 34,
        end: 57,
        help: Some(
            "A computed getter must return the derived value. Add a `return` that yields a value on every path through the getter.",
        ),
        labels: [
            Label {
                message: "computed getter without a return value",
                start: 34,
                end: 57,
            },
        ],
        fix: None,
    },
]
